Update log4j to use TezLog4jConfigurator and reload4j